# EnergyMonitor

./: .env  .gitignore  Cargo.toml  Dockerfile
migrations/: 20251222224626_create_prices_table.sql
src/: lib.rs  main.rs
src/api/: handlers.rs  routes.rs
src/domain/: mod.rs  models.rs  repository.rs
src/infrastructure/: db.rs  mod.rs  postgres_repo.rs  ree_client.rs
src/utils/: error.rs
tests/: api_tests.rs
